--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html{
+  margin: 0;
+  top:0;
+
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
